--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-		<script type="text/javascript" href="assets/javascript/game.js"></script>
+		
 	</head>
 
 	<body>
@@ -26,7 +26,7 @@
 			</section>
 
 			<section class="row gamearea">
-				<div class="col-md-auto" id="wordspaces">Game Area</div>
+				<div class="col-md-auto" id="wordspaces"></div>
 			</section>
 
 			<section class="row midarea">
@@ -42,5 +42,6 @@
 
 		</div> <!-- wrapper -->
 		
+		<script type="text/javascript" src="assets/javascript/game.js"></script>	
 	</body>
 </html>
