--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			<section class="row midarea">
 				<div class="col-md-6" id="hangmanimage">image here
-					<div id="guessremain">6 guesses left</div>
+					<div id="guessremain">10</div>
 				</div>
 				<div class="col-md-3" id="guessed">guessed letters</div>
 			</section>
